BottomNavBar añandida al main_menu y dependencias para integracion con GPT-4o mini

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,13 @@ app.*.map.json
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+# ==================================================
+# =============== OPENAI_API_KEY ===================
+# ==================================================
+
+openai_api_key.dart
+
+# ==================================================
+# =============== OPENAI_API_KEY ===================
+# ==================================================
