chatbot implementado con gemini-1.5-flash sin problemas en la API

--- a/.gitignore
+++ b/.gitignore
@@ -43,11 +43,9 @@ app.*.map.json
 /android/app/release
 
 # ==================================================
-# =============== OPENAI_API_KEY ===================
+# =================== API KEY ======================
 # ==================================================
-
-openai_api_key.dart
-
+api_key.dart
 # ==================================================
-# =============== OPENAI_API_KEY ===================
+# =================== API KEY ======================
 # ==================================================
