--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   dash_chat_2: ^0.0.21
-  chat_gpt_sdk: ^3.1.2
+  flutter_gemini: ^2.0.5
 
 dev_dependencies:
   flutter_test:
